5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1662_2968.log
== TEST (2019-04-15 15:14:40) 
-- CODE:
#lanche 5
#salg 3.5
#refri 4
L= int(input("Quant de Lanches: "))
S= int(input("Quant de salgados: "))
R= int(input("Quant de refri: "))

preco= (L*5)+(S*3.5)+(R*4)

print(round(preco, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    L= int(input())
ValueError: invalid literal for int() with base 10: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:35) 
-- CODE:
var= int(input("Quant de Lanches: (L/S) "))
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == L)
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(,sg, 2))
-- ERROR:
File "XXXX", line 5
    if(var == L)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:39) 
-- CODE:
var= int(input("Quant de Lanches: (L/S) "))
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == L)
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var == L)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:48) 
-- CODE:
var= int(input("Quant de Lanches: (L/S) "))
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == "L")
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var == "L")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:22) 
-- CODE:
var= int(input("Quant de Lanches (L/S) "))
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == "L")
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var == "L")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:32) 
-- CODE:
var= int(input("Quant de Lanches (L/S) "))
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var = "L")
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var = "L")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:43) 
-- CODE:
var= input("Quant de Lanches (L/S) ")
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var = "L")
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var = "L")
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:01) 
-- CODE:
var= input("Quant de Lanches (L/S) ")
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == "L")
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- ERROR:
File "XXXX", line 5
    if(var == "L")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:17) 
-- CODE:
var= input("Quant de Lanches (L/S)? ")
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == "L"):
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- OUTPUT:
11.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:32) 
-- CODE:
var= input("Quant de Lanches (L/S)? ")
S= int(input("Quant de salg ou lanches: "))
R= int(input("Quant de refri: "))

if(var == "L"):
	msg= (S*5)+(R*4)
else:
	msg= (S*3.5)+(R*4)

print(round(msg, 2))
-- EXECUTION TIME:
0.182942
-- TEST CASE 1:
---- input:
S
1
2
---- correct output:
11.5
---- user output:
11.5
-- TEST CASE 2:
---- input:
L
6
7
---- correct output:
58.0
---- user output:
58
-- TEST CASE 3:
---- input:
S
2
2
---- correct output:
15.0
---- user output:
15.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
